bugfixing and enabling event import again
